# mobile-app-inventory-tracer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ado_mobile_scanner.py  mobile_app_inventory_tracer.py  pyproject.toml
.github/workflows/: publish.yml
appsec_scan_router/: __init__.py  activity.py  auth.py  azure.py  cli.py  constants.py  detection.py  github.py  models.py  reports.py  scanner.py  sdk.py  store_lookup.py  ui.py  utils.py
appsec_scan_router/ui_static/: app.js  index.html  styles.css
mobile_scanner/: __init__.py  azure.py  cli.py  constants.py  detection.py  metadata.py  models.py  reports.py  scanner.py  store_lookup.py
tests/: test_ado_mobile_scanner.py
