[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "appsec-scan-router"
version = "1.0.0"
description = "SDK and CLI for routing Azure DevOps mobile app inventory scans with optional public store validation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "AppSec Scan Router contributors"}]
keywords = [
    "appsec",
    "sdk",
    "azure-devops",
    "mobile",
    "inventory",
    "android",
    "ios",
    "app-store",
    "google-play",
]
dependencies = ["openpyxl>=3.1.0", "requests>=2.31.0"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/h0p3sf4ll/mobile-app-inventory-tracer"
Repository = "https://github.com/h0p3sf4ll/mobile-app-inventory-tracer"
Issues = "https://github.com/h0p3sf4ll/mobile-app-inventory-tracer/issues"

[project.scripts]
appsec-scan-router = "appsec_scan_router.cli:main"
mobile-app-inventory-tracer = "appsec_scan_router.cli:main"
ado-mobile-scanner = "appsec_scan_router.cli:main"

[tool.setuptools]
packages = ["appsec_scan_router", "mobile_scanner"]
py-modules = ["ado_mobile_scanner", "mobile_app_inventory_tracer"]
