[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "appsec-scan-router"
version = "1.3.3"
description = "SDK, CLI, UI, and scanner target manifests for application inventory across Azure DevOps and GitHub Enterprise"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "AppSec Inventory Service contributors"}]
keywords = [
    "appsec",
    "sdk",
    "azure-devops",
    "github-enterprise",
    "mobile",
    "web-applications",
    "microservices",
    "middleware",
    "ai",
    "llm",
    "machine-learning",
    "inventory",
    "semgrep",
    "sonarqube",
    "android",
    "ios",
    "app-store",
    "google-play",
]
dependencies = ["openpyxl>=3.1.0", "requests>=2.31.0"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/h0p3sf4ll/appsec-inventory-service"
Repository = "https://github.com/h0p3sf4ll/appsec-inventory-service"
Issues = "https://github.com/h0p3sf4ll/appsec-inventory-service/issues"

[project.scripts]
appsec-inventory-service = "appsec_scan_router.cli:main"
appsec-inventory-service-ui = "appsec_scan_router.ui:main"
appsec-inventory-service-container = "appsec_scan_router.entrypoint:main"
appsec-scan-router = "appsec_scan_router.cli:main"
appsec-scan-router-ui = "appsec_scan_router.ui:main"
appsec-scan-router-container = "appsec_scan_router.entrypoint:main"
mobile-app-inventory-tracer = "appsec_scan_router.cli:main"
ado-mobile-scanner = "appsec_scan_router.cli:main"

[tool.setuptools]
packages = ["appsec_scan_router", "appsec_scan_router.ui_static", "mobile_scanner"]
py-modules = ["ado_mobile_scanner", "mobile_app_inventory_tracer"]

[tool.setuptools.package-data]
appsec_scan_router = ["ui_static/*"]
